# huaweicloud-skills-analyzer

./: config-example.yaml  config.py  main.py  pyproject.toml  requirements.txt  run_output.txt  test_output.txt  test_output2.txt
cache/: koocli-obs-guidance.md
huaweicloud_skills_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
reports/: huawei-cloud-ascend-command_analysis_report.md  huawei-cloud-ascend-models-deploy_analysis_report.md  huawei-cloud-ascend-op-mfu-calculator_analysis_report.md  huawei-cloud-ascend-profiler-db-explorer_analysis_report.md  huawei-cloud-ascend-remote-connect_analysis_report.md  huawei-cloud-ascend-small-model-migrate_analysis_report.md  huawei-cloud-ascendc-operator-performance-optim_analysis_report.md  huawei-cloud-billing-scout_analysis_report.md  huawei-cloud-business-support-query_analysis_report.md  huawei-cloud-cce-cluster-management_analysis_report.md  huawei-cloud-cce-env-assessment_analysis_report.md  huawei-cloud-cci-instance-management_analysis_report.md  huawei-cloud-ces-ecs-monitoring_analysis_report.md  huawei-cloud-cli-guidance_analysis_report.md  huawei-cloud-computing-query_analysis_report.md  huawei-cloud-ecs-alert_analysis_report.md  huawei-cloud-eip-cost-optimizer_analysis_report.md  huawei-cloud-find-skills_analysis_report.md  huawei-cloud-flexus-l-deploy-jiuwenswarm_analysis_report.md  huawei-cloud-flexus-l-server-hermes-deployment_analysis_report.md  huawei-cloud-flexus-l-server-manage_analysis_report.md  huawei-cloud-flexus-l-server-openclaw-deployment_analysis_report.md  (+27 more)
templates/: report_template.md.j2
(+62 files in other folders)
